fixed Navbar on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -125,7 +125,7 @@ html, body {
 
 .NavBar {
   position: fixed;
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: flex-start safe;
@@ -135,7 +135,7 @@ html, body {
 
 .NavBar > a {
   color: white;
-  padding: 2em;
+  padding: 2;
   white-space: nowrap;
 }
 
